react/src/components/sidebar.css
.sidebar {
    /*add some space to the left*/
    background-color: #f7f1e8;
    padding: 2rem;
    font-size: 16px;
}

.sidebar_mobile {
    /*add some space to the left*/
    background-color: #eee;
    padding: 2rem;
    font-size: 20pt;
}

.sidebar-section-title {
    margin-bottom: 0.5rem;
    border-bottom: 1px solid #ccc;
    color: #444;
}

.sidebar-section-content {
    list-style-type: none;
    padding: 0;
    margin: 0;
    transition: max-height 0.25s, margin 0.25s, padding 0.25s;
    overflow-y: clip;
}

.sidebar-section-content.hidden, .sidebar-section-content.hidden .sidebar-section-content {
    transition: none
}

.sidebar-section-content .sidebar-section-content {
    margin-left: 0.75em;
    font-size: 15px;
}

.sidebar-section-content a {
    color: #22f;
    text-decoration: none;
}

.sidebar-section-content li {
    margin-bottom: 0.5em;
    position: relative;
}

.sidebar-section-content_mobile li {
    margin-bottom: 1rem;
}

.sidebar-section-title_mobile {
    margin-bottom: 0.75rem;
}

.sidebar_mobile input {
    transform: scale(1.6);
}

.sidebar_mobile label {
    padding-left: 0.5em;
}

.expandButton {
    padding: 0;
    border: none;
    background: none;
    position: absolute;
    top: 0;
    bottom: 0;
    left: -18px;
    aspect-ratio: 1 / 1;
    color: #444;
    transition: transform 0.25s;
    font-size: 12px;
    vertical-align: middle;
}

.sidebar-section-content .sidebar-section-content .expandButton {
    left: -16px;
}

.sidebar-section-content_mobile .expandButton {
    right: 0;
    left: unset;
    font-size: 30px;
}

.sidebar-section-content .sidebar-section-content.sidebar-section-content_mobile .expandButton {
    font-size: 25px;
    left: unset;
    right: 5px;
}

